# render

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  main.cpp
include/: pipeline.h  render.h  window.h
source/: render.cpp  window.cpp
